--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-openai==1.3.3
+numpy==1.24.2
+openai==1.3.5
 Pillow==10.1.0
 PyAudio==0.2.14
 pydub==0.25.1
 requests==2.28.1
 rich==13.7.0
 setuptools==65.6.3
+simpleaudio==1.0.4
