--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+elevenlabs==0.2.26
+ffmpeg_python==0.2.0
+moviepy==1.0.3
 numpy==1.24.2
-openai==1.3.5
+openai==1.3.7
+opencv_python==4.8.1.78
 Pillow==10.1.0
 pydub==0.25.1
-requests
+replicate==0.21.1
+Requests==2.31.0
 rich==13.7.0
 setuptools==65.6.3
 simpleaudio==1.0.4
-elevenlabs
-replicate
+sounddevice==0.4.6
+tqdm==4.66.1
