--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-cuda_python==11.8.2; sys_platform == 'linux'
-elevenlabs==0.2.26
-ffmpeg_python==0.2.0
-moviepy==1.0.3
-numpy==1.24.4
-openai==1.3.7
-opencv_contrib_python==4.7.0.68
-opencv_python==4.7.0.72
-Pillow==10.1.0
-pydub==0.25.1
-PyOpenGL==3.1.7
-PySDL2==0.9.16
-replicate==0.21.1
-Requests==2.31.0
-rich==13.7.0
-setuptools==65.6.3
-simpleaudio==1.0.4
-sounddevice==0.4.6
-torch==2.0.0
-tqdm==4.65.0
+cuda_python; sys_platform == 'linux'
+elevenlabs
+ffmpeg_python
+moviepy
+numpy
+openai
+opencv_python
+Pillow
+pydub
+PyOpenGL
+PySDL2
+replicate
+Requests
+rich
+setuptools
+simpleaudio
+sounddevice
+torch
+tqdm
