--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,2 @@
-cuda-python; sys_platform == 'linux'
-fal-client
-elevenlabs
-ffmpeg
-ffmpeg_python
-matplotlib
-moviepy
 numpy
-openai
-opencv_python
-Pillow
-pygame
-pynput
-pydub
-python-osc
-PyOpenGL
-PySDL2
-PyYAML
-pysdl2-dll
-replicate
-Requests
-rich
-setuptools
-simpleaudio
-sounddevice
-tqdm
-pyusb
-zmq
+requests
