--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,50 @@
 [tox]
-envlist = py311
+envlist = lint,py311,extras-audio,extras-llm,extras-vision,extras-presentation
 isolated_build = false
 skip_missing_interpreters = true
 
 [testenv]
+description = Run pytest with coverage enabled
 deps =
     -r requirements.txt
+    pytest>=7
+    coverage[toml]>=7.5
 commands =
-    pytest
+    coverage run -m pytest {posargs}
+    coverage report
 extras =
-    audio
-    comms
-    display
+    stacks
+
+[testenv:lint]
+description = Static analysis via ruff and mypy
+skip_install = true
+deps =
+    ruff>=0.5
+    mypy>=1.9
+commands =
+    ruff check .
+    mypy lunar_tools
+
+[testenv:extras-audio]
+description = Ensure audio extra imports remain healthy
+deps = -r requirements.txt
+extras = audio
+commands = python tests/extras_smoke.py audio
+
+[testenv:extras-llm]
+description = Ensure llm extra imports remain healthy
+deps = -r requirements.txt
+extras = llm
+commands = python tests/extras_smoke.py llm
+
+[testenv:extras-vision]
+description = Ensure vision extra imports remain healthy
+deps = -r requirements.txt
+extras = vision
+commands = python tests/extras_smoke.py vision
+
+[testenv:extras-presentation]
+description = Ensure presentation extra imports remain healthy
+deps = -r requirements.txt
+extras = presentation
+commands = python tests/extras_smoke.py presentation
